manifest_in.json: Re-order IOMMU branch

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -1284,61 +1284,6 @@
             "stuck_at_ref": ""
         },
         {
-            "branch": "for_intel_next_5.5-rc1",
-            "branch_type": "expiring",
-            "config_options": [
-                {
-                    "name": "CONFIG_INTEL_IOMMU_SVM",
-                    "value": "y"
-                },
-                {
-                    "name": "CONFIG_INTEL_IOMMU_DEFAULT_ON",
-                    "value": "y"
-                },
-                {
-                    "name": "CONFIG_INTEL_IOMMU_SCALABLE_MODE_ON",
-                    "value": "y"
-                }
-            ],
-            "contributor": [
-                {
-                    "name": "Baolu Lu",
-                    "email": "baolu.lu@linux.intel.com"
-                },
-                {
-                    "name": "Jacob Pan",
-                    "email": "jacon.jun.pan@linux.intel.com"
-                }
-            ],
-            "description": "IOMMU scalable mode",
-            "enabled": true,
-            "ip_owner": [
-                {
-                    "name": "Ashok Raj",
-                    "email": "ashok.raj@intel.com"
-                },
-                {
-                    "name": "Kevin Tian",
-                    "email": "kevin.tian@intel.com"
-                }
-            ],
-            "jira": "NEXT-1692",
-            "name": "iommu",
-            "repourl": "ssh://git-ccr-1.devtools.intel.com:29418/iommu_next-siov.git",
-            "sdl_contact": [
-                {
-                    "name": "Ashok Raj",
-                    "email": "ashok.raj@intel.com"
-                },
-                {
-                    "name": "Kevin Tian",
-                    "email": "kenvin.tian@intel.com"
-                }
-            ],
-            "status": "public",
-            "stuck_at_ref": ""
-        },
-        {
             "branch": "for-eywa",
             "branch_type": "expiring",
             "config_options": [
@@ -3344,6 +3289,57 @@
                 {
                     "name": "Ashok Raj",
                     "email": "ashok.raj@intel.com"
+                }
+            ],
+            "status": "intel confidential",
+            "stuck_at_ref": ""
+        },
+        {
+            "branch": "for_intel_next_5.5-rc1",
+            "branch_type": "expiring",
+            "config_options": [
+                {
+                    "name": "CONFIG_INTEL_IOMMU_SVM",
+                    "value": "y"
+                },
+                {
+                    "name": "CONFIG_INTEL_IOMMU_DEFAULT_ON",
+                    "value": "y"
+                },
+                {
+                    "name": "CONFIG_INTEL_IOMMU_SCALABLE_MODE_ON",
+                    "value": "y"
+                }
+            ],
+            "contributor": [
+                {
+                    "name": "Baolu Lu",
+                    "email": "baolu.lu@linux.intel.com"
+                }
+            ],
+            "description": "IOMMU scalable mode",
+            "enabled": true,
+            "ip_owner": [
+                {
+                    "name": "Ashok Raj",
+                    "email": "ashok.raj@intel.com"
+                },
+                {
+                    "name": "Kevin Tian",
+                    "email": "kevin.tian@intel.com"
+                }
+            ],
+            "jira": "NEXT-1692",
+            "name": "iommu",
+            "repourl": "ssh://git-ccr-1.devtools.intel.com:29418/iommu_next-siov.git",
+            "sdl_contact": [
+                {
+                    "name": "Ashok Raj",
+                    "email": "ashok.raj@intel.com"
+                },
+                {
+                    "name": "Kevin Tian",
+                    "email": "kevin.tian@intel.com"
                 }
             ],
             "status": "intel confidential",
