manifest_in.json: Disable IOMMU branch

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -3318,7 +3318,7 @@
                 }
             ],
             "description": "IOMMU scalable mode",
-            "enabled": true,
+            "enabled": false,
             "ip_owner": [
                 {
                     "name": "Ashok Raj",
