manifest_in.json: Disable AMX branch

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -2339,7 +2339,7 @@
                 }
             ],
             "description": "Advanced Matrix Extension (AMX/TMUL)",
-            "enabled": true,
+            "enabled": false,
             "ip_owner": [
                 {
                     "name": "Bob Valentine",
