Enable Watchdog Timer

--- a/drivers/watchdog/Kconfig
+++ b/drivers/watchdog/Kconfig
@@ -982,6 +982,16 @@ config PM8916_WATCHDOG
 	  Say Y here to include support watchdog timer embedded into the
 	  pm8916 module.
 
+config THUNDERBAY_WATCHDOG
+	tristate "Intel Thunder Bay SoC non-secure watchdog"
+	depends on OF
+	select WATCHDOG_CORE
+	help
+	  Say Y here to include support for the non-secure watchdog timer
+	  in Intel Thunder Bay SoC.
+	  To compile this driver as a module, choose M here:
+	  the module will be called thunderbay_wdt.
+
 # X86 (i386 + ia64 + x86_64) Architecture
 
 config ACQUIRE_WDT
