--- a/drivers/phy/intel/Kconfig
+++ b/drivers/phy/intel/Kconfig
@@ -1,9 +1,16 @@
 # SPDX-License-Identifier: GPL-2.0
 #
-# Phy drivers for Intel Lightning Mountain(LGM) platform
+# Phy drivers for Intel Lightning Mountain(LGM) and Intel Thunderbay platform
 #
 config PHY_INTEL_EMMC
 	tristate "Intel EMMC PHY driver"
 	select GENERIC_PHY
 	help
 	  Enable this to support the Intel EMMC PHY
+
+config PHY_THUNDERBAY_EMMC
+        tristate "Intel ThunderBay eMMC PHY driver"
+        depends on OF && (ARM64 || COMPILE_TEST)
+        select GENERIC_PHY
+        help
+          This option enables support for Intel ThunderBay SoC eMMC PHY.
