--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -466,6 +466,7 @@ config PVPANIC
 	  (guest) communicate panic events to the host.
 
 source "drivers/misc/c2port/Kconfig"
+source "drivers/misc/xbay/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
 source "drivers/misc/ti-st/Kconfig"
