--- a/drivers/pci/controller/dwc/Kconfig
+++ b/drivers/pci/controller/dwc/Kconfig
@@ -267,6 +267,32 @@ config PCIE_UNIPHIER
 	  Say Y here if you want PCIe controller support on UniPhier SoCs.
 	  This driver supports LD20 and PXs3 SoCs.
 
+config PCIE_TBH
+        bool
+
+config PCIE_TBH_HOST
+        bool "Intel TBH PCIe controller Host mode (EXPERIMENTAL)"
+        depends on ARM64 || COMPILE_TEST
+        depends on OF && HAS_IOMEM
+        depends on PCI && PCI_MSI_IRQ_DOMAIN
+        select PCIE_DW_HOST
+        select PCIE_TBH
+        help
+          Say Y here to enable support for the PCIe controller in TBH
+          to work in host mode.
+
+config PCIE_TBH_EP
+        bool "Intel TBH PCIe controller Endpoint mode (EXPERIMENTAL)"
+        depends on ARM64 || COMPILE_TEST
+        depends on OF && HAS_IOMEM
+        depends on PCI && PCI_MSI_IRQ_DOMAIN
+        depends on PCI_ENDPOINT
+        select PCIE_DW_EP
+        select PCIE_TBH
+        help
+          Say Y here to enable support for the PCIe controller in TBH
+          to work in endpoint mode.
+
 config PCIE_AL
 	bool "Amazon Annapurna Labs PCIe controller"
 	depends on OF && (ARM64 || COMPILE_TEST)
