manifest_in.json: Remove stuck-ref from cta branch

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -2783,7 +2783,7 @@
                 }
             ],
             "status": "intel confidential",
-            "stuck_at_ref": "cf12eac1511b3a57e7d78daa594ae22a027ab219"
+            "stuck_at_ref": ""
         },
         {
             "branch": "master",
