--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -4161,7 +4161,7 @@
                 }
             ],
             "description": "CXL Preliminary Enumeration / PCIe for A0",
-            "enabled": true,
+            "enabled": false,
             "ip_owner": [
                 {
                     "name": "Prajwal Mohan",
