--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -652,7 +652,7 @@
                 }
             ],
             "description": "USB host support and fixes",
-            "enabled": true,
+            "enabled": false,
             "ip_owner": [
                 {
                     "name": "Abdul Rahman Ismail",
