manifest_in.json: Update the branch name for topic branch cxl

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -4151,7 +4151,7 @@
             "stuck_at_ref": ""
         },
         {
-            "branch": "tags/cxl-5.6.0-rc6",
+            "branch": "cxl-next",
             "branch_type": "expiring",
             "config_options": [],
             "contributor": [
