--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -1312,7 +1312,7 @@
                 }
             ],
             "description": "Type-C Support",
-            "enabled": false,
+            "enabled": true,
             "ip_owner": [
                 {
                     "name": "Vijay Kadgi",
