--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -2504,7 +2504,7 @@
             ],
             "jira": "NEXT-1841",
             "name": "perf-tools",
-            "repourl": "ssh://git-amr-3.devtools.intel.com:29418/otc_mmc-linux.git",
+            "repourl": "ssh://git-amr-3.devtools.intel.com:29418/otc_mmc-linux",
             "sdl_contact": [
                 {
                     "name": "Kai Svahn",
