manifest_in.json: enabling pks branch

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -3566,21 +3566,21 @@
                     "email": "fenghua.yu@intel.com"
                 }
             ],
-            "description": "Introduces APIs for Protetion Kes for Supervisor pages",
-            "enabled": false,
+            "description": "These patches are preparation for follow-one PKSpatches",
+            "enabled": true,
             "ip_owner": [
                 {
                     "name": "Ravi Shankar",
                     "email": "ravi.v.shankar@intel.com"
                 }
             ],
-            "jira": "",
+            "jira": "NEXT-1869",
             "name": "PKS",
             "repourl": "ssh://git-amr-4.devtools.intel.com:29418/enabling_cldemote_in_linux_kerne-linux_git.git",
             "sdl_contact": [
                 {
-                    "name": "Dan Williams",
-                    "email": "dan.j.williams@intel.com"
+                    "name": "Dave Hansen",
+                    "email": "dave.hansen@intel.com"
                 }
             ],
             "status": "intel confidential",
